2001-02-17  Mark Mitchell  <mark@codesourcery.com>

	* invoke.texi (-fsquangle): Remove documentation.
	(-fname-mangling-version): Likewise.

2001-02-18  Lars Brinkhoff  <lars@nocrew.org>

	* optabs.c (expand_abs): Remove reference to
	HAVE_contitional_arithmetic.
	* combine.c (simplify_set): Likewise.

2001-02-18  Richard Henderson  <rth@redhat.com>

	* ifcvt.c (dead_or_predicable): Don't move code if eh regions
	would be disrupted.

2001-02-18  Richard Henderson  <rth@redhat.com>

	* config/ns32k/ns32k.h (ADJSP): Upcase arguments.

	* config/alpha/alpha.md (movsi_fix): Fix typo in pattern name.

	* reload1.c (reload_cse_simplify_set): Fix typo.

Sun Feb 18 09:30:09 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* diagnostic.c (_fatal_insn): Decrement errorcount.

	* invoke.texi (-I): Add note avoiding use for system header files.

	* rtl.h (add_clobbers): Remove duplicate declaration.
	* recog.h (added_clobbers_hard_reg_p): New declaration.
	* genemit.c (struct clobber_pat): New field has_hard_reg.
	(gen_insn): Record if added clobbers clobber hard reg.
	(gen_split): Avoid unused warning if number of operands is 0.
	(output_added_clobbers_hard_reg_p): New function.
	(main): Call it.

2001-02-18  Alan Modra <alan@linuxcare.com.au>

 	* pa.c (hppa_expand_prologue): Simplify code storing return
 	pointer.  For large (>=8k) frames with a post_store, adjust stack
 	pointer by 8k-64 first rather than by 64.  When testing with
 	VAL_14_BITS_P, always use the actual value rather than the value
 	negated.  Add blockage to prevent scheduling of spills before
 	stack frame has been created.
 	(hppa_expand_epilogue): Simplify code loading return pointer.
 	Allow a slightly larger range for merge_sp_adjust_with_load case.
 	When testing with VAL_14_BITS_P, always use the actual value.

	* pa.c (pa_adjust_insn_length): Check that block move
	pattern is a set before looking at operands.

2001-02-17  Mark Mitchell  <mark@codesourcery.com>
